Fix tsconfig.json - remove deprecated option

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,7 @@
     "noFallthroughCasesInSwitch": true,
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    "noImplicitAny": false,
-    "suppressImplicitAnyIndexErrors": true
+    "noImplicitAny": false
   },
   "include": [
     "src/**/*"
