--- a/package.json
+++ b/package.json
@@ -1,45 +1,35 @@
 {
-  "name": "ts-chatbot",
+  "name": "minsu-bot",
   "version": "1.0.0",
-  "main": "dist/server.js",
+  "description": "민수Bot - GPT API를 이용한 인사/노무 상담 챗봇",
+  "main": "src/server.ts",
   "scripts": {
-    "dev": "ts-node --watch src/server.ts",
-    "start": "npx ts-node src/server.ts",
+    "dev": "ts-node src/server.ts",
+    "start": "ts-node src/server.ts",
     "build": "tsc",
-    "serve": "node dist/server.js",
-    "deploy": "npm run build && npm run serve",
-    "clean": "rmdir /s /q dist 2>nul || true",
-    "vercel-build": "tsc"
+    "clean": "rm -rf dist"
   },
   "keywords": [
     "chatbot",
     "gpt",
     "typescript",
-    "express"
+    "express",
+    "labor-law",
+    "hr"
   ],
-  "author": "",
-  "license": "ISC",
+  "author": "ByeonMinSoo",
+  "license": "MIT",
   "dependencies": {
-    "@types/node": "^24.0.14",
-    "@types/uuid": "^10.0.0",
     "cors": "^2.8.5",
-    "cosine-similarity": "^1.0.1",
     "dotenv": "^17.2.0",
     "express": "^4.18.2",
-    "fs-extra": "^11.3.0",
-    "mammoth": "^1.9.1",
-    "openai": "^5.10.1",
-    "pdf-parse": "^1.1.1",
-    "typescript": "^5.8.3",
-    "uuid": "^11.1.0",
-    "xlsx": "^0.18.5"
+    "openai": "^5.10.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/fs-extra": "^11.0.4",
-    "@types/pdf-parse": "^1.1.5",
-    "ts-node": "^10.9.2"
-  },
-  "description": "민수bot - GPT API를 이용한 웹 챗봇"
+    "@types/node": "^24.0.14",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
+  }
 } 
