--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "ByeonMinSoo",
   "license": "MIT",
   "dependencies": {
+    "@vercel/node": "^5.3.13",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^4.18.2",
@@ -33,4 +34,4 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
-} 
+}
